--- a/backend/themes/main/index.html
+++ b/backend/themes/main/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>FastAPI + Vue2 + Vuetify2</title>
-
-  <base href="/backend/">
+  <title>AKM TRACKER</title>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Vuetify CSS -->
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
 
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/backend/backend/css/style.css" rel="stylesheet">
 
   <!-- Vue 2 -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
