--- a/backend/themes/main/pages/auth.html
+++ b/backend/themes/main/pages/auth.html
@@ -38,7 +38,7 @@
 <!-- ================== -->
 <!-- Скрипт регистрации компонента -->
 <!-- ================== -->
-<script>
+<script type="application/javascript">
 Vue.component('auth-component', {
   template: '#auth-template',
   data() {
@@ -81,3 +81,5 @@ Vue.component('auth-component', {
   }
 });
 </script>
+
+<auth-component></auth-component>
