--- a/backend/themes/main/index.html
+++ b/backend/themes/main/index.html
@@ -23,7 +23,7 @@
   <div id="app">
     <v-app>
       <v-main>
-        <v-container>
+        <v-container  fluid class="pa-0">
 
           {% include page_to_include %}
 
