--- a/backend/themes/main/pages/dashboard.html
+++ b/backend/themes/main/pages/dashboard.html
@@ -117,7 +117,7 @@
             <v-tab-item>
                 <v-card flat>
                     <v-card-text>
-                        <h3>About</h3>
+                        <h3>Documentation</h3>
                         <about-component></about-component>
                     </v-card-text>
                 </v-card>
@@ -144,7 +144,7 @@
                     "Domains",
                     "Settings",
                     "Users",
-                    "About"
+                    "Documentattion"
                 ],
 
             }
