--- a/backend/themes/main/pages/dashboard.html
+++ b/backend/themes/main/pages/dashboard.html
@@ -1,4 +1,4 @@
-<script type="text/x-template" id="dashboard-template">
+<script type="text/x-template" id="dashboard-page-template">
     <v-container fluid>
 
         <v-row class="align-center mb-2">
@@ -34,8 +34,7 @@
             <v-tab-item>
                 <v-card flat>
                     <v-card-text>
-                        <h3>Welcome to Dashboard</h3>
-                        <p>This is the main overview.</p>
+                        <dashboard-component></dashboard-component>
                     </v-card-text>
                 </v-card>
             </v-tab-item>
@@ -93,7 +92,6 @@
             <v-tab-item>
                 <v-card flat>
                     <v-card-text>
-                        <h3>Domains</h3>
                         <domains-component></domains-component>
                     </v-card-text>
                 </v-card>
@@ -128,8 +126,8 @@
 </script>
 
 <script type="application/javascript">
-    Vue.component('dashboard-component', {
-        template: '#dashboard-template',
+    Vue.component('dashboard-page-component', {
+        template: '#dashboard-page-template',
         data() {
             return {
                 tab: 0, // Active tab
