simple version of settings

--- a/backend/themes/main/pages/dashboard.html
+++ b/backend/themes/main/pages/dashboard.html
@@ -148,6 +148,10 @@
                     console.log('Domains tab selected');
                     this.$root.$emit('load-domains');
                 }
+                if (this.tab === 8) { // Если Domains вкладка
+                    console.log('Settings tab selected');
+                    this.$root.$emit('load-settings');
+                }
             }
         },
         methods: {
