simple version of affiliates

--- a/backend/themes/default/pages/dashboard.html
+++ b/backend/themes/default/pages/dashboard.html
@@ -147,6 +147,9 @@
                 if (this.tab === 2) {
                     this.$root.$emit('load-landings');
                 }
+                if (this.tab === 3) {
+                    this.$root.$emit('load-affiliates');
+                }
                 if (this.tab === 5) {
                     this.$root.$emit('load-sources');
                 }
